--- a/module_0/signup.html
+++ b/module_0/signup.html
@@ -3,8 +3,8 @@
   <head>
   	<meta name="viewport" content="width=device-width, initial-scale=1">
   	<meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="css/normalize.css">
-  	<link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/normalize.css">
+  	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>Sign up</title>
   </head>
   <body>
