--- a/module_0/index.html
+++ b/module_0/index.html
@@ -17,15 +17,15 @@
   <![endif]-->
 
     <div class="container">
-      <header class="item-a"></header>
-      <nav class="item-b"></nav>
+      <header class="item-a"><h2>HEADER</h2></header>
+      <nav class="item-b"><h2>NAV</h2></nav>
       <section class="item-c">
-        <header class="item-c1"></header>
-        <article class="item-c2"></article>
-        <footer class="item-c3"></footer>
+        <header class="item-c1"><h2>HEADER</h2></header>
+        <article class="item-c2"><h2>ARTICLE</h2></article>
+        <footer class="item-c3"><h2>FOOTER</h2></footer>
       </section>
-      <aside class="item-d"></aside>
-      <footer class="item-e"></footer>
+      <aside class="item-d"><h2>ASIDE</h2></aside>
+      <footer class="item-e"><h2>FOOTER</h2></footer>
     </div>
   </body>
 </html>
