module_0 - 2.5.1 - Layout of index.html with float added and refactored css

--- a/module_0/multimedia.html
+++ b/module_0/multimedia.html
@@ -9,9 +9,7 @@
   	<h2>Image</h2>
     <img src="../image_0.png" alt="HTML5 logo">
     <h2>Video</h2>
-
-    <!-- iframe code obtained from YouTube -->
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/UesRFwu-ON8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <video controls src="assets/video/video.mp4"></video>
     <h2>Audio</h2>
     <audio controls>
       <source src="sampleaudio.mp3" type="audio/audio/mpeg">
