--- a/module_0/myexpenses.html
+++ b/module_0/myexpenses.html
@@ -10,12 +10,12 @@
   	  <h1>My expenses table</h1>
   	</header>
     <table>
-      <th>
+      <thead>
       	<tr>
       	  <td>Expense one</td>
       	  <td>Expense two</td>
       	</tr>
-      </th>
+      </thead>
       <tbody>
       	<tr>
       	  <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
