--- a/module_0/signup.html
+++ b/module_0/signup.html
@@ -8,27 +8,27 @@
     <title>Sign up</title>
   </head>
   <body>
-  	<div>
+  	<div class="signupcontainer">
   	  <h2>Sign up</h2>
   	  <h4>Please complete the fields</h4>
       <form>
         <label for="fname">First name</label>
-        <input id="fname" type="text" required>
+        <input class="inputdata" id="fname" type="text" required>
         <label for="lname">Last name</label>
-        <input id="lname" type="text" required>
+        <input class="inputdata" id="lname" type="text" required>
         <label for="bday">Birthday</label>
-        <input id="bday" type="date" required>
+        <input class="inputdata" id="bday" type="date" required>
         <label for="email">E-mail</label>
-        <input id="email" type="email" required>
+        <input class="inputdata" id="email" type="email" required>
         <label for="dropdown">Favourite sport</label>
-        <select id="dropdown">
+        <select class="favsports" id="dropdown">
        	  <option>Football</option>
        	  <option>Tennis</option>
        	  <option>Voleyball</option>
        	  <option>Rugby</option>
         </select>
         <label for="sbio">Small bio</label>
-        <textarea id="sbio"></textarea>
+        <textarea class="smtextarea" id="sbio"></textarea>
         <div>
    	      <input class="button" type="button" value="Clear form">
           <input class="button" type="submit" value="Send">
