module_0 - 2.6 - showcase.html adapted to work on mobile screens with media queries

--- a/module_0/showcase.html
+++ b/module_0/showcase.html
@@ -17,11 +17,11 @@
   	  <h4 class="headertitle">Showcase</h4>
   	  <section class="headertext">
   	    <p>Incredible Types is a curated collection and showcase of outstanding typography and design from around the world. We currently have 354 pieces of inspirational design in our showcase, from 365 creatives studios from 46 different countries</p>
-  	    <p>Follow us on<span>Twitter</span>,<span>Facebook</span>, and<span>Pinterest</span>or subscribe to our<span>RSS Feed</span></p>
+  	    <p>Follow us on<span class="contact">Twitter</span>,<span class="contact">Facebook</span>, and<span class="contact">Pinterest</span>or subscribe to our<span class="contact">RSS Feed</span></p>
   	  </section>
   	</header>
   	<section class="design">
-  	  <img src="assets/image/design1.jpg">
+  	  <img class="designimg" src="assets/image/design1.jpg">
   	  <article class="description"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
   	  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
   	  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -29,7 +29,7 @@
   	  cillum dolore eu fugiat nulla pariatur.</p></article>
   	</section>
   	<section class="design">
-  	  <img src="assets/image/design2.jpg">
+  	  <img class="designimg" src="assets/image/design2.jpg">
 	  <article class="description"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
   	  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
   	  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -37,7 +37,7 @@
   	  cillum dolore eu fugiat nulla pariatur.</p></article>
   	</section>
   	<section class="design">
-  	  <img src="assets/image/design3.jpg">
+  	  <img class="designimg" src="assets/image/design3.jpg">
 	  <article class="description"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
   	  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
   	  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -45,7 +45,7 @@
   	  cillum dolore eu fugiat nulla pariatur.</p></article>
   	</section>
   	<section class="design">
-  	  <img src="assets/image/design4.png">
+  	  <img class="designimg" src="assets/image/design4.png">
 	  <article class="description"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
   	  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
   	  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -53,7 +53,7 @@
   	  cillum dolore eu fugiat nulla pariatur.</p></article>
   	</section>
   	<section class="design">
-  	  <img src="assets/image/design5.jpg">
+  	  <img class="designimg" src="assets/image/design5.jpg">
 	  <article class="description"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
   	  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
   	  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -61,7 +61,7 @@
   	  cillum dolore eu fugiat nulla pariatur.</p></article>
   	</section>
   	<section class="design">
-  	  <img src="assets/image/design6.jpg">
+  	  <img class="designimg" src="assets/image/design6.jpg">
 	  <article class="description"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
   	  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
   	  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
