module_1 - 2 - Added a button below the section that calls a function when clicked. That function showcases an alert message

--- a/module_1/index.html
+++ b/module_1/index.html
@@ -20,6 +20,7 @@
         <article class="item-c2"><h2>ARTICLE</h2></article>
         <footer class="item-c3 footer"><h2>FOOTER</h2></footer>
       </section>
+      <input class="button" type="button" name="" value="Press me!">
       <aside class="item-d sidebar"><h2>ASIDE</h2></aside>
       <footer class="item-e footer"><h2>FOOTER</h2></footer>
     </div>
