--- a/module_1/index.html
+++ b/module_1/index.html
@@ -18,8 +18,12 @@
       <section class="item-c content hide">
         <header class="item-c1 header"><h2>HELLO WORLD</h2></header>
       </section>
-      <input class="button" type="button" name="" value="Press me!">
-      <aside class="item-d sidebar"><h2>ASIDE</h2></aside>
+      <input class="button" type="button" name="" value="Get a joke!">
+      <aside class="item-d sidebar"><ul></ul></aside>
+      <form class="searchform">
+      	<input type="text" id="searchinput">
+      	<input type="submit" class="searchbutton" value="Search repos">
+      </form>
       <footer class="item-e footer"><h2>FOOTER</h2></footer>
     </div>
   </body>
