module_1 - 5 - W3C. .html and .css files validated by W3C validator

--- a/module_1/index.html
+++ b/module_1/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="assets/css/normalize.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+<html lang="en">
   <head>
-    <title></title>
+  	<meta charset="utf-8">
+  	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="assets/css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <title>Data fetching</title>
   </head>
   <body>
   <!--[if IE]>
@@ -18,7 +18,7 @@
       <section class="item-c content hide">
         <header class="item-c1 header"><h2>HELLO WORLD</h2></header>
       </section>
-      <input class="button" type="button" name="" value="Get a joke!">
+      <input class="button" type="button" value="Get a joke!">
       <aside class="item-d sidebar"><ul></ul></aside>
       <form class="searchform">
       	<input type="text" id="searchinput">
@@ -26,6 +26,6 @@
       </form>
       <footer class="item-e footer"><h2>FOOTER</h2></footer>
     </div>
+    <script src="assets/js/script.js"></script>
   </body>
-  <script type="text/javascript" src="assets/js/script.js"></script>
 </html>
