module_2 - 5 - ES6 Modules. Created a single js bundle with babel

--- a/module_2/index.html
+++ b/module_2/index.html
@@ -63,6 +63,6 @@
   	  cillum dolore eu fugiat nulla pariatur.</p></article>
   	</section>
   </div>
-  <script type="text/javascript" src="assets/js/script.js"></script>
+  <script type="text/javascript" src="assets/js/script-compiled.js"></script>
   </body>
 </html>
