module_4 - 2 - Drag and drop. Added drag and drop support of text files into a textarea

--- a/module_4/index.html
+++ b/module_4/index.html
@@ -14,8 +14,9 @@
       </form>
     </section>
     <section>
-      <textarea rows="10" cols="50" placeholder="Result" id="textsaved" disabled></textarea>
+      <textarea rows="10" cols="50" placeholder="Result" id="textsaved"></textarea>
     </section>
+    <p id="status">File API & FileReader API not supported</p>
     <script type="text/javascript" src="assets/js/script.js"></script>
   </body>
 </html>
