--- a/module_4/index.html
+++ b/module_4/index.html
@@ -17,6 +17,11 @@
       <textarea rows="10" cols="50" placeholder="Result" id="textsaved"></textarea>
     </section>
     <p id="status">File API & FileReader API not supported</p>
+    <svg viewBox="0 0 200 100" xmlns="http://www.w3.org/2000/svg">
+      <polygon points="0,100 50,25 50,75 100,0" />
+      <polygon points="100,100 150,25 150,75 200,0"
+      fill="none" stroke="black"/>
+    </svg>
     <script type="text/javascript" src="assets/js/script.js"></script>
   </body>
 </html>
