module_4 - 5 - Canvas. Created a canvas. When the page loads, a random geometric figure appears. Also, added an animated rectangle that bounces horizontally inside the canvas

--- a/module_4/index.html
+++ b/module_4/index.html
@@ -6,7 +6,7 @@
     <title>HTML5 APIs</title>
   </head>
   <body>
-  	<section class="formbox">
+<!--   	<section class="formbox">
       <form class="saveform">
         <textarea rows="10" cols="50" placeholder="Text here" id="totext"></textarea>
         <button id="clearbutton">Clear</button>
@@ -16,7 +16,8 @@
     <section>
       <textarea rows="10" cols="50" placeholder="Result" id="textsaved"></textarea>
     </section>
-    <p id="status">File API & FileReader API not supported</p>
+    <p id="status">File API & FileReader API not supported</p>-->
+    <canvas id="mycanvas" width="500" height="250"></canvas>
     <svg viewBox="0 0 200 100" xmlns="http://www.w3.org/2000/svg">
       <polygon points="0,100 50,25 50,75 100,0" />
       <polygon points="100,100 150,25 150,75 200,0"
